--- a/Codice/Form/Hotel/ListiniCamere.resx
+++ b/Codice/Form/Hotel/ListiniCamere.resx
@@ -117,11 +117,206 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="Panel1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="lblIntestazione.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="TabControl1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="TabPage1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label12.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label11.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label10.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Panel4.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label22.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label23.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtScontoRagazzo_Alta.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label24.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtScontoBambino_Alta.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label25.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtScontoNeonato_Alta.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label26.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtPensioneCompleta_Alta.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label27.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtMezzaPensione_Alta.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label28.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtBB_Alta.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label29.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtSoloPernottamento_Alta.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Panel3.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label13.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label14.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtScontoRagazzo_Media.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label15.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtScontoBambino_Media.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label16.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtScontoNeonato_Media.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label18.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtPensioneCompleta_Media.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label19.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtMezzaPensione_Media.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label20.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtBB_Media.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label21.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtSoloPernottamento_Media.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Panel2.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label17.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label9.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtScontoRagazzo_Bassa.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label8.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtScontoBambino_Bassa.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label6.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtScontoNeonato_Bassa.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label5.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtPensioneCompleta_Bassa.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label4.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtMezzaPensione_Bassa.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label2.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtBB_Bassa.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtSoloPernottamento_Bassa.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtCodice.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label7.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="cmbTipologia.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtDescrizione.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="label.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label3.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="TabPage6.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtNote.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="ErrorProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>217, 17</value>
   </metadata>
+  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>42</value>
+  </metadata>
+  <metadata name="ToolBar1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
   </metadata>
   <metadata name="ImageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>100, 20</value>
@@ -131,34 +326,34 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABG
-        BwAAAk1TRnQBSQFMAgEBAgEAAcQBAAHEAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABEP8AFwABzAKZAf8BzAJOAf8BzAJOAf8BmQJOAf8BmQJOAf8BmQJOAf8BmQEb
-        AU4B/wGZAhsB/wGZAhsB/wGZAhsB/wGZAhsB/wGZAhsB/wFOAhsB/wFOAhsB/8gAAcwCTgL/ApkB/wHM
-        ApkB/wHMAhsB/wMbAf8DwAH/A8AB/wPLAf8DzAH/Az0B/wGZAhsB/wGZAhsB/wGZAhsB/wFOAhsB/ygA
-        AcwBTgEbAf8BzAFOARsB/5gAAcwCTgL/ApkC/wKZAf8BzAKZAf8DRwH/AyoB/wOAAf8D6gH/A+oB/wOG
-        Af8BmQIbAf8BmQIbAf8BmQIbAf8BmQIbAf8oAAHMAU4BGwL/AZkBTgH/AcwBTgEbAf+UAAHMAk4C/wKZ
-        Av8CmQL/ApkB/wNHAf8DAAH/AyoC/wHsAcwC/wHsAcwB/wNfAf8BzAIbAf8BzAIbAf8BmQIbAf8BmQIb
-        Af8oAAHMAU4BGwL/AZkBTgL/AZkBTgH/AcwBTgEbAf+QAAHMAU4BmQL/AZkBzAL/ApkC/wKZAf8DRwH/
-        A0cB/wNHAf8DRwH/A04B/wGZAk4B/wHMAk4B/wHMAk4B/wHMAhsB/wGZAhsB/ywAAcwBTgEbAv8BmQFO
-        Av8BmQFOAf+QAAHMApkB/wHwAcoBpgH/AfABygGmAv8CmQL/ApkC/wKZAf8BzAKZAf8BzAFOAZkB/wHM
-        Ak4B/wHMAk4B/wHMAk4B/wHMAk4B/wHMAk4B/wGZAhsB/zAAAcwBTgEbAv8BmQFOAf8BzAFOARsB/4wA
-        AcwCmQL/AswB/wHwAcoBpgH/AcwCTgH/AcwCTgH/AcwCTgH/AcwBTgEbAf8BzAFOARsB/wHMAhsB/wGZ
-        AhsB/wGZARsBAAH/AcwCTgH/AcwCTgH/AZkCGwH/DAABzAFOARsB/wHMAU4BGwH/AcwBTgEbAf8BzAFO
-        ARsB/wHMAU4BGwH/AZkBTgEbAf8MAAHMAU4BGwL/AZkBTgH/AfABygGmAf+MAAHMApkC/wLMAf8BzAJO
-        Cf8D+AH/A/EB/wPqAv8B7AHMAf8D1wH/A8wB/wGZARsBAAH/AcwCTgH/AZkBGwFOAf8MAAHMAZkBTgH/
-        AcwBTgEbAv8BmQFOAv8BmQFOAf8BzAGZAU4B/xAAAcwBTgEbAf8BzAGZAU4C/wHMAZkB/4wAAcwCmQL/
-        AswB/wHMAk4N/wP4Af8D8QH/A+oC/wHsAcwB/wPXAf8BmQIbAf8BzAJOAf8BmQJOAf8MAAHMAZkBTgL/
-        AZkBTgL/AZkBTgL/AZkBTgH/AcwBTgEbAf8QAAHMAU4BGwH/AcwBTgEbAv8BzAGZAf+MAAH/ApkC/wLM
-        Af8BzAJOEf8D+AH/A/EB/wPqAv8B7AHMAf8BzAIbAf8BzAJOAf8BmQJOAf8MAAHMAZkBTgL/AZkBTgL/
-        AZkBTgL/AZkBTgH/AcwBTgEbAf8BzAFOARsB/wwAAZkBTgEbAf8BzAFOARsC/wHMAZkB/4wAAf8CmQL/
-        AswB/wHMApkV/wP4Af8D8QH/A+oB/wHMAU4BGwH/AcwBTgGZAf8BmQJOAf8MAAH/ApkB/wHwAcoBpgH/
-        AfABygGmAv8BzAGZAf8BzAGZAU4B/wHMAU4BGwH/AcwBTgEbAf8BzAGZAU4B/wHMAk4B/wGZAU4BGwL/
-        AZkBTgH/AfABygGmAf+MAAHwAcoBpgL/AswC/wKZGf8D+AH/A/EB/wHMAU4BGwH/AU4CGwH/AcwCTgH/
-        DAAB/wKZAf8IAAHwAcoBpgL/AcwBmQL/AZkBTgH/AcwBTgEbAf8BzAFOARsB/wHMAU4BGwH/AcwBTgEb
-        Af8B8AHKAaYB/wHwAcoBpgH/jAAB8AHKAaYC/wLMAv8CmR3/A/gB/wHMAk4B/wHMAk4B/wHMAk4B/xwA
+        BwAAAk1TRnQBSQFMAgEBAgEAAcwBAAHMAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABEP8AFwABzAKZAf8BzAJNAf8BzAJNAf8BmQJNAf8BmQJNAf8BmQJNAf8BmQEa
+        AU0B/wGZAhoB/wGZAhoB/wGZAhoB/wGZAhoB/wGZAhoB/wFNAhoB/wFNAhoB/8gAAcwCTQL/ApkB/wHM
+        ApkB/wHMAhoB/wMaAf8DwAH/A8AB/wPLAf8DzAH/AzwB/wGZAhoB/wGZAhoB/wGZAhoB/wFNAhoB/ygA
+        AcwBTQEaAf8BzAFNARoB/5gAAcwCTQL/ApkC/wKZAf8BzAKZAf8DRgH/AykB/wOAAf8D6gH/A+oB/wOG
+        Af8BmQIaAf8BmQIaAf8BmQIaAf8BmQIaAf8oAAHMAU0BGgL/AZkBTQH/AcwBTQEaAf+UAAHMAk0C/wKZ
+        Av8CmQL/ApkB/wNGAf8DAAH/AykC/wHsAcwC/wHsAcwB/wNeAf8BzAIaAf8BzAIaAf8BmQIaAf8BmQIa
+        Af8oAAHMAU0BGgL/AZkBTQL/AZkBTQH/AcwBTQEaAf+QAAHMAU0BmQL/AZkBzAL/ApkC/wKZAf8DRgH/
+        A0YB/wNGAf8DRgH/A00B/wGZAk0B/wHMAk0B/wHMAk0B/wHMAhoB/wGZAhoB/ywAAcwBTQEaAv8BmQFN
+        Av8BmQFNAf+QAAHMApkB/wHwAcoBpgH/AfABygGmAv8CmQL/ApkC/wKZAf8BzAKZAf8BzAFNAZkB/wHM
+        Ak0B/wHMAk0B/wHMAk0B/wHMAk0B/wHMAk0B/wGZAhoB/zAAAcwBTQEaAv8BmQFNAf8BzAFNARoB/4wA
+        AcwCmQL/AswB/wHwAcoBpgH/AcwCTQH/AcwCTQH/AcwCTQH/AcwBTQEaAf8BzAFNARoB/wHMAhoB/wGZ
+        AhoB/wGZARoBAAH/AcwCTQH/AcwCTQH/AZkCGgH/DAABzAFNARoB/wHMAU0BGgH/AcwBTQEaAf8BzAFN
+        ARoB/wHMAU0BGgH/AZkBTQEaAf8MAAHMAU0BGgL/AZkBTQH/AfABygGmAf+MAAHMApkC/wLMAf8BzAJN
+        Cf8D+AH/A/EB/wPqAv8B7AHMAf8D1wH/A8wB/wGZARoBAAH/AcwCTQH/AZkBGgFNAf8MAAHMAZkBTQH/
+        AcwBTQEaAv8BmQFNAv8BmQFNAf8BzAGZAU0B/xAAAcwBTQEaAf8BzAGZAU0C/wHMAZkB/4wAAcwCmQL/
+        AswB/wHMAk0N/wP4Af8D8QH/A+oC/wHsAcwB/wPXAf8BmQIaAf8BzAJNAf8BmQJNAf8MAAHMAZkBTQL/
+        AZkBTQL/AZkBTQL/AZkBTQH/AcwBTQEaAf8QAAHMAU0BGgH/AcwBTQEaAv8BzAGZAf+MAAH/ApkC/wLM
+        Af8BzAJNEf8D+AH/A/EB/wPqAv8B7AHMAf8BzAIaAf8BzAJNAf8BmQJNAf8MAAHMAZkBTQL/AZkBTQL/
+        AZkBTQL/AZkBTQH/AcwBTQEaAf8BzAFNARoB/wwAAZkBTQEaAf8BzAFNARoC/wHMAZkB/4wAAf8CmQL/
+        AswB/wHMApkV/wP4Af8D8QH/A+oB/wHMAU0BGgH/AcwBTQGZAf8BmQJNAf8MAAH/ApkB/wHwAcoBpgH/
+        AfABygGmAv8BzAGZAf8BzAGZAU0B/wHMAU0BGgH/AcwBTQEaAf8BzAGZAU0B/wHMAk0B/wGZAU0BGgL/
+        AZkBTQH/AfABygGmAf+MAAHwAcoBpgL/AswC/wKZGf8D+AH/A/EB/wHMAU0BGgH/AU0CGgH/AcwCTQH/
+        DAAB/wKZAf8IAAHwAcoBpgL/AcwBmQL/AZkBTQH/AcwBTQEaAf8BzAFNARoB/wHMAU0BGgH/AcwBTQEa
+        Af8B8AHKAaYB/wHwAcoBpgH/jAAB8AHKAaYC/wLMAv8CmR3/A/gB/wHMAk0B/wHMAk0B/wHMAk0B/xwA
         AfABygGmAv8BzAGZAf8B8AHKAaYC/wKZAv8CmQH/AfABygGmAf8B8AHKAaYB/5AAAfABygGmAf8B8AHK
         AaYB/wHwAcoBpgH/AfABygGmAv8BmQHMAv8CmQH/AcwCmQH/AcwCmQH/AcwCmQH/AcwCmQH/AcwCmQH/
-        AcwBTgGZAf8BzAJOAf8BzAJOAf8gAAH/AswB/wHwAcoBpgH/AfABygGmAf8B8AHKAaYC/wLMAf//AJEA
+        AcwBTQGZAf8BzAJNAf8BzAJNAf8gAAH/AswB/wHwAcoBpgH/AfABygGmAf8B8AHKAaYC/wLMAf//AJEA
         AUIBTQE+BwABPgMAASgDAAFAAwABEAMAAQEBAAEBBQABgBcAA/8BAAT/BAABgAEBAv8EAAGAAQEB/wGf
         BAABgAEBAf8BjwQAAYABAQH/AYcEAAGAAQEB/wHHBAABgAEBAf8B4wQAAYABAQHAAeMEAAGAAQEBwQHj
         BAABgAEBAcEB4wQAAYABAQHAAeMEAAGAAQEBwAEDBAABgAEBAdgBAwQAAYABAQH8AQcEAAGAAQEB/gEP
